--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <title>Beh Negaran Advertise Company</title>
   </head>
   <body>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg costume-nav">
         <div class="container-fluid">
           <img src="./assets/img/logo.png" class="navbar-brand bg-dark"></img>
@@ -88,5 +90,19 @@
           </div>
         </div>
       </nav>
+
+      <!-- Banner Section -->
+      <main class="banner-section">
+        <div class="container">
+          <div class="banner">
+
+          </div>
+
+          <div class="row">
+            
+          </div>
+
+        </div>
+      </main>
   </body>
 </html>
