--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="scroll-progress"></div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg costume-nav">
+    <nav class="navbar navbar-expand-lg costume-nav sticky-top">
         <div class="container-fluid">
           <img src="./assets/img/logo3.png" class="navbar-brand"></img>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,12 +99,7 @@
       <main class="banner-section">
         <div class="container-fluid px-0">
           <div class="banner">
-           <div class="row">
-             <div class="glass-effect mt-5">
-            <h1>به نگاران تجارت آزما</h1>
-            <h4>رشد مجازی، فروش واقعی</h4>
-          </div>
-           </div>
+           
           </div>
 
           <div class="row quick-service-box">
