--- a/index.html
+++ b/index.html
@@ -157,20 +157,54 @@
 
           </div>
         </div>
-
+<!-- About Company -->
         <div class="container mt-5">
           <div class="row about-section">
             <div class="col-md-4 col-sm-12">
               <h3>درباره شرکت</h3>
+              <div class="horizontal-line2"></div>
               <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
               <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
-              <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+              <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</p>
             </div>
             <div class="col-md-8 col-sm-12">
               <div class="h_iframe-aparat_embed_frame">
                 <span style="display: block;padding-top: 57%"></span>
                 <iframe src="https://www.aparat.com/video/video/embed/videohash/Eq28t/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
                 </iframe></div>
+            </div>
+          </div>
+
+          <div class="row mt-5 text-center">
+            <div class="col-md-12 col-sm-12">
+             <h3>چرا سفارش آنلاین ؟</h3>
+             <div class="horizontal-line mb-3"></div>
+             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+             <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+            </div>
+          </div>
+
+          <!-- Numbers Section -->
+          <div class="row">
+            <div class="col-md-4 col-sm-12">
+              <article class="project-number">
+                <span class="number" data-value="500">۰</span>
+                <p>پروژه های موفق</p>
+              </article>
+            </div>
+
+            <div class="col-md-4 col-sm-12">
+              <article class="hour-number">
+                <span class="number" data-value="17140">۰</span>
+                <p>ساعت های کار</p>
+              </article>
+            </div>
+
+            <div class="col-md-4 col-sm-12">
+              <article class="costumer-number">
+                <span class="number" data-value="1500">۰</span>
+                <p>مشتریان راضی</p>
+              </article>
             </div>
           </div>
         </div>
