--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Vazir Font --------------------------------------->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/vazir-font/30.1.0/font-face.min.css"
@@ -11,18 +12,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Bootstrap RTL ----------------------------------------------------->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
-
+     <!-- Bootstrap CSS ---------------------------------------------------->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <!-- Main CSS ----------------------------------------------------------->
     <link rel="stylesheet" href="assets/main.css" />
+    <!-- Main JS ------------------------------------------------->
     <script src="assets/main.js" defer></script>
+    <!-- Bootstrap JS ----------------------------------------------------->
     <script
       src="node_modules/bootstrap/dist/js/bootstrap.min.js"
       defer
     ></script>
+    <!-- Popper JS -------------------------------------------------------->
     <script
       src="node_modules/@popperjs/core/dist/umd/popper.min.js"
       defer
@@ -31,10 +37,10 @@
   </head>
   <body>
 
-    <!-- Scroll Bar -->
+    <!-- Scroll Bar ------------------------------------------------------>
     <div id="scroll-progress"></div>
 
-    <!-- Navbar -->
+    <!-- Navbar -------------------------------------------------------------->
     <nav class="navbar navbar-expand-lg costume-nav sticky-top">
         <div class="container-fluid">
           <img src="./assets/img/logo4.svg" class="navbar-brand"></img>
@@ -95,7 +101,7 @@
         </div>
       </nav>
 
-      <!-- Banner Section -->
+      <!-- Banner Section ---------------------------------------------------------------->
       <main class="main-section">
         <div class="container-fluid px-0">
           <div class="banner">
@@ -121,7 +127,7 @@
           </div>
           </div>
 
-          <!-- Card Section -->
+          <!-- Card Section --------------------------------------------------------------->
           <div class="container">
           <div class="row cards-box">
             <div class="col-md-4 col-sm-12">
@@ -157,7 +163,7 @@
 
           </div>
         </div>
-<!-- About Company -->
+<!-- About Company ------------------------------------------------------------->
         <div class="container mt-5">
           <div class="row about-section">
             <div class="col-md-4 col-sm-12">
@@ -184,7 +190,7 @@
             </div>
           </div>
 
-          <!-- Numbers Section -->
+          <!-- Numbers Section ----------------------------------------------->
           <div class="row">
             <div class="col-md-4 col-sm-12">
               <article class="project-number">
