added company brands

--- a/index.html
+++ b/index.html
@@ -213,9 +213,40 @@
               </article>
             </div>
           </div>
+
+        <!-- Company Brands -------------------------------------------------->
+          <div class="row mt-5 text-center">
+           <h3>شرکت هایی که همکاری کردیم</h3>
+           <div class="horizontal-line"></div>
+          </div>
+
+          <div class="row mt-5">
+           <div class="col-md-12 brands-logo d-flex justify-content-around">
+             <img src="assets/img/brand1.svg" alt="">
+             <img src="assets/img/brand2.svg" alt="">
+             <img src="assets/img/brand3.svg" alt="">
+             <img src="assets/img/brand7.svg" alt="">
+             <img src="assets/img/brand8.svg" alt="">
+           </div>
+
+           <div class="col-md-12 brands-logo d-flex justify-content-evenly mt-3">
+            <img src="assets/img/brand4.svg" alt="">
+            <img src="assets/img/brand5.svg" alt="">
+            <img src="assets/img/brand6.svg" alt="">
+            <img src="assets/img/brand9.svg" alt="">
+             <img src="assets/img/brand10.svg" alt="">
+          </div>
+          </div>
         </div>
 
         </div>
       </main>
+
+      <!-- Footer --------------------------------------------------------->
+      <footer>
+        <div class="container-fluid">
+          
+        </div>
+      </footer>
   </body>
 </html>
