--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Box Icons -------------------------------------------------------->
+    <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet" />
     <!-- Bootstrap RTL ----------------------------------------------------->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.rtl.min.css" integrity="sha384-gXt9imSW0VcJVHezoNQsP+TNrjYXoGcrqBZJpry9zJt8PCQjobwmhMGaDHTASo9N" crossorigin="anonymous">
      <!-- Bootstrap CSS ---------------------------------------------------->
@@ -191,7 +193,7 @@
           </div>
 
           <!-- Numbers Section ----------------------------------------------->
-          <div class="row">
+          <div class="row mt-5 mb-5">
             <div class="col-md-4 col-sm-12">
               <article class="project-number">
                 <span class="number" data-value="500">۰</span>
@@ -222,19 +224,19 @@
 
           <div class="row mt-5">
            <div class="col-md-12 brands-logo d-flex justify-content-around">
-             <img src="assets/img/brand1.svg" alt="">
-             <img src="assets/img/brand2.svg" alt="">
-             <img src="assets/img/brand3.svg" alt="">
-             <img src="assets/img/brand7.svg" alt="">
-             <img src="assets/img/brand8.svg" alt="">
+             <img src="assets/img/brand1.svg" alt="brand1">
+             <img src="assets/img/brand2.svg" alt="brand2">
+             <img src="assets/img/brand3.svg" alt="brand3">
+             <img src="assets/img/brand7.svg" alt="brand4">
+             <img src="assets/img/brand8.svg" alt="brand5">
            </div>
 
            <div class="col-md-12 brands-logo d-flex justify-content-evenly mt-3">
-            <img src="assets/img/brand4.svg" alt="">
-            <img src="assets/img/brand5.svg" alt="">
-            <img src="assets/img/brand6.svg" alt="">
-            <img src="assets/img/brand9.svg" alt="">
-             <img src="assets/img/brand10.svg" alt="">
+            <img src="assets/img/brand4.svg" alt="brand6">
+            <img src="assets/img/brand5.svg" alt="brand7">
+            <img src="assets/img/brand6.svg" alt="brand8">
+            <img src="assets/img/brand9.svg" alt="brand9">
+             <img src="assets/img/brand10.svg" alt="brand10">
           </div>
           </div>
         </div>
@@ -243,9 +245,70 @@
       </main>
 
       <!-- Footer --------------------------------------------------------->
-      <footer>
+      <footer class="footer">
         <div class="container-fluid">
-          
+          <div class="row d-flex justify-content-end">
+            <img class="footer-logo" src="assets/img/logo4.svg" alt="logo">
+          </div>
+
+          <div class="row">
+            <div class="col-md-8 col-sm-12 footer-links">
+              <div class="row">
+              <div class="col-md-4">
+                <ul><span>به نگاران</span>
+                  <div class="footer-line"><span></span></div>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>درباره ما</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>تماس با ما</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>وبلاگ</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>پادکست</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul><span>راهنما</span>
+                  <div class="footer-line"><span></span></div>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>راهنمای سفارش</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>قوانین و مقررات</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>پرسش و پاسخ</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul><span>اطلاعات تکمیلی</span>
+                  <div class="footer-line"><span></span></div>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>باشگاه مشتریان</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>همکاری با ما</a></li>
+                  <li><a href="#"><i class='bx bx-chevron-left'></i>فرصت های شغلی</a></li>
+                </ul>
+              </div>
+            </div>
+            </div>
+
+            <div class="col-md-4 col-sm-12 footer-contact">
+              <ul>
+                <li>
+                  <i class='bx bx-phone-call'></i>
+                <span>تلفن پشتیبانی :</span>
+                <a href="tel:02634239029">۰۲۶۳۴۲۳۹۰۲۹</a>
+                </li>
+
+                <li>
+                  <i class='bx bxs-location-plus'></i>
+                  <span>دفتر شرکت : کرج، میدان توحید</span>
+                </li>
+                <li>
+                  <img class="e-namad" src="assets/img/enamad.png" alt="">
+                </li>
+                <li class="footer-social-icons">
+                  <a href="#"><i class='bx bxl-instagram'></i></a>
+                  <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                  <a href="#"><i class='bx bxl-linkedin'></i></a>
+                  <a href="#"><i class='bx bxl-youtube'></i></a>
+                </li>
+              </ul>
+
+            </div>
+
+          </div>
+
         </div>
       </footer>
   </body>
