--- a/index.html
+++ b/index.html
@@ -297,14 +297,22 @@
                 <li>
                   <img class="e-namad" src="assets/img/enamad.png" alt="">
                 </li>
-                <li class="footer-social-icons">
-                  <a href="#"><i class='bx bxl-instagram'></i></a>
-                  <a href="#"><i class='bx bxl-whatsapp'></i></a>
-                  <a href="#"><i class='bx bxl-linkedin'></i></a>
-                  <a href="#"><i class='bx bxl-youtube'></i></a>
-                </li>
+      
               </ul>
 
+            </div>
+
+            <div class="row mt-3 d-flex align-content-center">
+              <div class="col-md-6 col-sm-12">
+                <p>کلیه حقوق متعلق به تیم طراحی وب سایت به نگاران تجارت آزما</p>
+              </div>
+
+              <div class="col-md-6 col-sm-12 footer-social-icons footer-contact">
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-youtube'></i></a>
+              </div>
             </div>
 
           </div>
