--- a/index.html
+++ b/index.html
@@ -134,8 +134,12 @@
           <div class="row cards-box">
             <div class="col-md-4 col-sm-12">
               <div class="cards">
-                <div class="card-side front">
-                  <div>پادکست</div>
+                <div class="card-side front testt" >
+                  <div class="">
+                    پادکست
+
+                  </div>
+
                 </div>
                 <div class="card-side back">
                   <div>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</div>
