--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
     <!-- Scroll Bar ------------------------------------------------------>
     <!-- <div id="scroll-progress"></div> -->
 
+    <!-- Mobile Bottom Navbar --------------------------------------------->
+    <nav class="nav">
+      <a href="#" class="nav__link nav__link--active">
+        <i class='bx bx-home nav__icon'></i>
+        <span class="nav__text">خانه</span>
+      </a>
+      <a href="#" class="nav__link">
+        <i class='bx bx-shopping-bag nav__icon'></i>
+        <span class="nav__text">سفارش های من</span>
+      </a>
+      <a href="#" class="nav__link">
+        <i class='bx bx-user nav__icon'></i>
+        <span class="nav__text">حساب کاربری</span>
+      </a>
+      
+    </nav>
+
     <!-- Navbar -------------------------------------------------------------->
     <nav class="navbar navbar-expand-lg costume-nav">
         <div class="container-fluid">
@@ -170,10 +187,10 @@
           <div class="row">
             <div class="col-md-12">
               <div class="owl-carousel owl-theme .owl-dots .owl-dot text-center">
-                <div class="carousel-banner"> <img class="img-fluid" src="assets/img/banner3.jpg" alt="banner1"> </div>
-                <div class="carousel-banner"> <img class="img-fluid" src="assets/img/banner2.jpg" alt="banner2"> </div>
-                <div class="carousel-banner"> <img class="img-fluid" src="assets/img/banner3.jpg" alt="banner3"> </div>
-                <div class="carousel-banner"> <img class="img-fluid" src="assets/img/banner2.jpg" alt="banner4"> </div>
+                <div class="carousel-banner"> <a href="#"> <img class="img-fluid" src="assets/img/content-banner.png" alt="banner1"> </a> </div>
+                <div class="carousel-banner"> <a href="#"> <img class="img-fluid" src="assets/img/website-team-banner.png" alt="banner2"> </a> </div>
+                <div class="carousel-banner"> <a href="#"> <img class="img-fluid" src="assets/img/consulting-banner.png" alt="banner3"> </a> </div>
+                <div class="carousel-banner"> <a href="#"> <img class="img-fluid" src="assets/img/podcast-banner.png" alt="banner4"> </a> </div>
                 
               </div>
             </div>
@@ -241,7 +258,7 @@
                 <div class="carousel-banner"> <img src="assets/img/brand-1.png" alt="banner1"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-2.png" alt="banner2"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-3.png" alt="banner3"> </div>
-                <div class="carousel-banner"> <img src="assets/img/brand-4.png" alt="banner4"> </div>
+                <div class="carousel-banner"> <img src="assets/img/sandicate.svg" alt="banner4"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-5.png" alt="banner5"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-6.png" alt="banner6"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-7.png" alt="banner7"> </div>
@@ -255,7 +272,7 @@
                 <div class="carousel-banner"> <img src="assets/img/brand-1.png" alt="banner1"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-2.png" alt="banner2"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-3.png" alt="banner3"> </div>
-                <div class="carousel-banner"> <img src="assets/img/brand-4.png" alt="banner4"> </div>
+                <div class="carousel-banner"> <img src="assets/img/setad.svg" alt="banner4"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-5.png" alt="banner5"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-6.png" alt="banner6"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brand-7.png" alt="banner7"> </div>
@@ -316,7 +333,8 @@
                   <span>دفتر شرکت : کرج، میدان توحید</span>
                 </li>
                 <li>
-                  <img class="e-namad" src="assets/img/enamad.png" alt="">
+                  <img class="e-namad" src="assets/img/enamad-logo.png" alt="e-namad">
+                  <img class="e-namad" src="assets/img/samandehi-logo.png" alt="samandehi">
                 </li>
                 <li>
                   <div class="footer-social-icons">
@@ -332,9 +350,9 @@
             </div>
 
             <div class="row mt-3">
-              <a referrerpolicy="origin" target="_blank" href="https://trustseal.enamad.ir/?id=245447&amp;Code=eewDUE10jaZKLKtliHr3"><img referrerpolicy="origin" src="https://Trustseal.eNamad.ir/logo.aspx?id=245447&amp;Code=eewDUE10jaZKLKtliHr3" alt="" style="cursor:pointer" id="eewDUE10jaZKLKtliHr3"></a>
-                <p>کلیه حقوق متعلق به تیم طراحی وب سایت <span>به نگاران تجارت آزما</span></p>
-                <img referrerpolicy='origin' id = 'nbqejzpefukzoeukesgtapfu' style = 'cursor:pointer' onclick = 'window.open("https://logo.samandehi.ir/Verify.aspx?id=276805&p=uiwkjyoegvkamcsiobpddshw", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt = 'logo-samandehi' src = 'https://logo.samandehi.ir/logo.aspx?id=276805&p=odrfyndtwlbqaqgwlymaujyn' />
+              <p>کلیه حقوق متعلق به تیم طراحی وب سایت <span>به نگاران تجارت آزما</span></p>
+              <!-- <a referrerpolicy="origin" target="_blank" href="https://trustseal.enamad.ir/?id=245447&amp;Code=eewDUE10jaZKLKtliHr3"><img referrerpolicy="origin" src="https://Trustseal.eNamad.ir/logo.aspx?id=245447&amp;Code=eewDUE10jaZKLKtliHr3" alt="" style="cursor:pointer" id="eewDUE10jaZKLKtliHr3"></a>
+                <img referrerpolicy='origin' id = 'nbqejzpefukzoeukesgtapfu' style = 'cursor:pointer' onclick = 'window.open("https://logo.samandehi.ir/Verify.aspx?id=276805&p=uiwkjyoegvkamcsiobpddshw", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt = 'logo-samandehi' src = 'https://logo.samandehi.ir/logo.aspx?id=276805&p=odrfyndtwlbqaqgwlymaujyn' /> -->
             </div>
 
           </div>
