added collapsible footer items

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Font Awesome --------------------------------------------------->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <!-- Box Icons -------------------------------------------------------->
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet" />
     <!-- Bootstrap RTL ----------------------------------------------------->
@@ -267,7 +269,7 @@
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/energic.svg" alt="banner3"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/epil.svg" alt="banner4"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/mavad fannavar mehr.svg" alt="banner5"> </div>
-                <div class="carousel-banner"> <img src="assets/img/brands-logo/farahani pistachio.svg" alt="banner6"> </div>
+                <div class="carousel-banner"> <img src="assets/img/brands-logo/farahani.svg" alt="banner6"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/taheri knife.svg" alt="banner7"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/imath alborz.svg" alt="banner7"> </div>
                 <div class="carousel-banner"> <img src="assets/img/brands-logo/mehr velayat.svg" alt="banner7"> </div>
@@ -288,28 +290,34 @@
             <div class="col-md-8 col-sm-12 footer-links">
               <div class="row">
               <div class="col-md-4">
-                <ul><span>به نگاران</span>
+                <ul><span class="collapsible-trigger">به نگاران</span>
+                  <div class="content-collapse">
                   <div class="footer-line"><span></span></div>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>درباره ما</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>تماس با ما</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>وبلاگ</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>پادکست</a></li>
+                </div>
                 </ul>
               </div>
               <div class="col-md-4">
-                <ul><span>راهنما</span>
+                <ul><span class="collapsible-trigger">راهنما</span>
+                  <div class="content-collapse">
                   <div class="footer-line"><span></span></div>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>راهنمای سفارش</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>قوانین و مقررات</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>پرسش و پاسخ</a></li>
+                </div>
                 </ul>
               </div>
               <div class="col-md-4">
-                <ul><span>اطلاعات تکمیلی</span>
+                <ul><span class="collapsible-trigger">اطلاعات تکمیلی</span>
+                  <div class="content-collapse">
                   <div class="footer-line"><span></span></div>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>باشگاه مشتریان</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>همکاری با ما</a></li>
                   <li><a href="#"><i class='bx bx-chevron-left'></i>فرصت های شغلی</a></li>
+                </div>
                 </ul>
               </div>
             </div>
