fixed some bugs and styles

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="container-fluid service-icons-mobile-bg">
             <div class="row">
               
-                <div class="service-icons-mobile">
+                <div class="service-icons-mobile d-sm-block d-md-none">
                   <ul>
                 <li> <a href="#"><i class='bx bx-video-recording'></i> </a> </li>
                 <li> <a href="#"><i class='bx bx-camera'></i></i></a> </li>
