--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           
 
           <!-- Card Section --------------------------------------------------------------->
-          <div class="container-fluid mt-5">
+          <div class="container-fluid mt-5 pt-5">
           <div class="row">
             <div class="col-md-12">
               <div class="owl-carousel owl-theme .owl-dots .owl-dot text-center">
