--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- IRAN Sans Font -------------------------------------------------->
-    <link href="http://fonts.cdnfonts.com/css/iranian-sans" rel="stylesheet">
+    <!-- <link href="http://fonts.cdnfonts.com/css/iranian-sans" rel="stylesheet"> -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/iranian-sans" type="text/css"/>
     <!-- Vazir Font --------------------------------------->
     <link
       rel="stylesheet"
