--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
           
 
-          <!-- Card Section --------------------------------------------------------------->
+          <!-- banners Section --------------------------------------------------------------->
           <div class="container-fluid mt-5 pt-5">
           <div class="row">
             <div class="col-md-12">
