--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-lg costume-nav">
         <div class="container-fluid">
           <img src="./assets/img/logo4.svg" class="navbar-brand"></img>
-          <button class="navbar-toggler p-0 me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler p-0 me-3" id="myBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div id="menu_button">
               <input type="checkbox" id="menu_checkbox">
               <label for="menu_checkbox" id="menu_label">
@@ -408,6 +408,7 @@
 
             <div class="row mt-3">
               <p>کلیه حقوق متعلق به تیم طراحی وب سایت <span>به نگاران تجارت آزما</span></p>
+              
               <!-- <a referrerpolicy="origin" target="_blank" href="https://trustseal.enamad.ir/?id=245447&amp;Code=eewDUE10jaZKLKtliHr3"><img referrerpolicy="origin" src="https://Trustseal.eNamad.ir/logo.aspx?id=245447&amp;Code=eewDUE10jaZKLKtliHr3" alt="" style="cursor:pointer" id="eewDUE10jaZKLKtliHr3"></a>
                 <img referrerpolicy='origin' id = 'nbqejzpefukzoeukesgtapfu' style = 'cursor:pointer' onclick = 'window.open("https://logo.samandehi.ir/Verify.aspx?id=276805&p=uiwkjyoegvkamcsiobpddshw", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt = 'logo-samandehi' src = 'https://logo.samandehi.ir/logo.aspx?id=276805&p=odrfyndtwlbqaqgwlymaujyn' /> -->
             </div>
