--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-lg costume-nav">
         <div class="container-fluid">
           <img src="./assets/img/logo4.svg" class="navbar-brand"></img>
-          <button class="navbar-toggler p-0 me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler p-0 me-3" id="navbarTogglerBtn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div id="menu_button">
               <input type="checkbox" id="menu_checkbox">
               <label for="menu_checkbox" id="menu_label">
